* 2008-01-18 - thorben.betten@open-xchange.com

 - Bugfix #9111: Throwing an error if user tries to share a private folder
   whose name is equal to another shared folder of the same user.

* 2008-01-16 - marcus.klein@open-xchange.com

 - Bugfix #8411: Fixed completely missing recurrence rule in WebDAV iCal
   interface. 

* 2008-01-15 - sebastian.kauss@open-xchange.com

 - Bugfix: #10760: Missing recurrence attributes in appointment requests

* 2008-01-15 - thorben.betten@open-xchange.com

 - Preparations for bugfix #9111: Check for duplicate names when sharing a
   folder

* 2008-01-11 - sebastian.kauss@open-xchange.com

 - Bugfix #6960: Missing recurrence_id when deleting a 
   synchronized exception

 - Bugfix: #9734: add number_of_attachments and number_of_links to 
   json array (calendar, contacts, tasks)

 - Bugfix: #9742: Whole-day appointment series with two participants in
   different timezones not shown in dayview

* 2008-01-11 - thorben.betten@open-xchange.com

 - Bugfix #10691: Increased IMAP timeout settings for both initial socket
   connect and socket I/O
 - Bugfix #10739: Added connect timeout and timeout for blocking operations
   to socket when detecting IMAP server

* 2007-01-10 - sebastian.kauss@open-xchange.com

 - Bugfix #6455: WebDAV Interface: Unexpected SQL Error!

* 2008-01-10 - thorben.betten@open-xchange.com

 - Bugfix #10668: Decoding for newer mail-safe encoding as per RFC2231
 - Partial bugfix #10686: Overwriting JSESSIONID cookie if its ID refers to
   a non-existent or invalid HTTP session.

* 2008-01-09 - thorben.betten@open-xchange.com

 - Bugfix #10214: Using "Java port of Mozilla charset detector" to guess
   proper charset for uploaded files

* 2008-01-09 - francisco.laguna@open-xchange.com

 - Bug #10706: Don't lose the filename in an update to an infoitem via webdav.

* 2008-01-09 - marcus.klein@open-xchange.com

 - Bugfix #10688: Schema should be unlocked if a SQLException occurs during
   locking.
