@@ -47,14 +47,16 @@
  *
  */
 
-
-
 package com.openexchange.cache.dynamic.impl;
 
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.Lock;
 
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.apache.jcs.JCS;
 import org.apache.jcs.access.exception.CacheException;
 
@@ -64,6 +66,12 @@ import com.openexchange.groupware.AbstractOXException;
 
 public class CachedObjectInvocationHandler<T> implements InvocationHandler {
 
+    /**
+     * Logger.
+     */
+    private static final Log LOG = LogFactory.getLog(
+        CachedObjectInvocationHandler.class);
+ 
     private static final Method EQUALS;
 
     private final Object key;
@@ -99,22 +107,61 @@ public class CachedObjectInvocationHandler<T> implements InvocationHandler {
      * the database.
      * @throws AbstractOXException if loading or putting into cache fails.
      */
-    private final void refresh() throws AbstractOXException {
+    private void refresh() throws AbstractOXException {
         final Lock lock = factory.getCacheLock();
+        Condition cond = null;
+        boolean load;
         lock.lock();
         try {
-            cached = (T) cache.get(key);
-            if (null == cached) {
-                cached = factory.load();
+            final Object tmp = cache.get(key);
+            if (null == tmp) {
+                // I am the thread to load the object. Put temporary condition
+                // into cache.
+                load = true;
+                cond = lock.newCondition();
                 try {
-                    cache.putSafe(key, cached);
+                    cache.putSafe(key, cond);
                 } catch (CacheException e) {
                     throw new OXCachingException(OXCachingException.Code
                         .FAILED_PUT, e);
                 }
+            } else if (tmp instanceof Condition) {
+                // I have to wait for another thread to load the object.
+                cond = (Condition) tmp;
+                if (cond.await(1, TimeUnit.SECONDS)) {
+                    // Other thread finished loading the object.
+                    load = false;
+                    cached = (T) cache.get(key);
+                } else {
+                    // We have to load it, too.
+                    LOG.warn("Found 2 threads loading cached objects after 1 "
+                        + "second.");
+                    load = true;
+                }
+            } else {
+                // Only other option is that the cache contains the delegate
+                // object.
+                cached = (T) tmp;
+                load = false;
             }
+        } catch (InterruptedException e) {
+            load = true;
+            LOG.error(e.getMessage(), e);
         } finally {
             lock.unlock();
+        }
+        if (load) {
+            cached = factory.load();
+            lock.lock();
+            try {
+                cond.signalAll();
+                cache.put(key, cached);
+            } catch (CacheException e) {
+                throw new OXCachingException(OXCachingException.Code.FAILED_PUT,
+                    e);
+            } finally {
+                lock.unlock();
+            }
         }
     }
 
