@@ -1,3 +1,8 @@
+* 2008-01-29 - marcus.klein@open-xchange.com
+
+ - Bugfix #10767: Locking for thread safety of cached object improved to prevent
+   performance issues if load method for cached object is slow.
+
 * 2008-01-18 - thorben.betten@open-xchange.com
 
  - Bugfix #9111: Throwing an error if user tries to share a private folder
